--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,10 @@
 .footer{
 	background-color: black;
 	margin:0px auto;
-	padding: 20px 0px 20px 0px;
+	padding: 30px 0px 30px 0px;
+}
+.footer p{
+	margin: 20px auto;
 }
 .footer h5, .footer address,.footer{
 	color: white;
@@ -23,8 +26,55 @@
 	color: floralwhite;
 
 }
+body{
+	padding: 50px 0px 0px 0px;
+	z-index: 0;
+}
+.navbar-dark{
+	background-color: #512DA8;
+}
 address{
 	font-size: 80%;
 	margin:0px;
 	color:#0f0f0f;
+}
+
+
+
+.btn-self{
+	    background: #f0c14b;
+    border-color: #a88734 #9c7e31 #846a29;
+    color: #111 !important;
+    font-family: "Amazon Ember"!important;
+	border: none !important;
+	border-bottom: 3px solid #846a29 !important;
+	box-shadow: none !important;
+	word-wrap: normal;
+	margin: 10px auto;
+	/*line-height: 1.2em;*/
+	text-decoration: none !important;
+	
+	-webkit-transition: all .1s linear;
+    transition: all .1s linear;
+    line-height: 19px;
+
+
+
+	font-weight: 700 !important;
+	font-size: 16px;
+	letter-spacing: .2px;
+	border-radius: 6px;
+	padding: 10px 10px;
+	text-align: center;
+	display: inline-block;
+	cursor: pointer;
+	box-sizing: border-box;
+	z-index: 20;
+}
+.btn-self:hover {
+	background-color: #e6b800;
+	box-shadow: 3px 2px 6px 2px grey !important;
+}
+.btn-self-text{
+    padding: 0 10px 0 11px;
 }
