--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,9 @@ address{
     border-bottom: 1px solid #ddd;
     padding: 10px;
 }
-
+.card-header {
+    cursor: pointer;
+}
 
 .btn-self{
 	    background: #f0c14b;
